--- a/Jobsheet 6.ipynb
+++ b/Jobsheet 6.ipynb
@@ -48,6 +48,7 @@
     "# Pembacaan data dan visualisasi\n",
     "df = pd.read_csv('Dataset/iris.csv', header=None)\n",
     "\n",
+    "# Mengambil data dari kolom ke-4\n",
     "setosa = df[df[4] == 'Iris-setosa']\n",
     "versicolor = df[df[4] == 'Iris-versicolor']\n",
     "virginica = df[df[4] == 'Iris-virginica']\n",
@@ -73,26 +74,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pembuatan kelas Perceptron\n",
-    "# pada jobsheet ini, penerapan perceptron dibuat dalam satu kelas khusus\n",
     "\n",
+    "# Membuat class dengan nama perceptron dengan parameter object\n",
     "class Perceptron(object):\n",
+    "    # Kontruktor class dalam python dinamakan def init\n",
+    "    # Class yang berparameter\n",
+    "    # Self = objek atau atribut\n",
+    "    # Eta = alfa (learning rate) dengan interval 0-1 yang dimana dalam studi kasus ini dg nilai 0,01\n",
+    "    # Iter = iterasi yang diberi nilai 10\n",
     "    def __init__(self, eta=0.01, n_iter=10):\n",
+    "\n",
+    "        # self.eta = Atribut class perceptron\n",
+    "        # = eta : ngambil dari data yang dikirimkan melalui instansiasi objek class perceptron\n",
     "        self.eta = eta\n",
     "        self.n_iter = n_iter\n",
     "    \n",
+    "\n",
+    "    # Membuat fungsi berparameter\n",
+    "    # def fit = fungsi untuk mengolah data dengan logika perceptron\n",
+    "    # X dan y adalah data yang akan diolah\n",
+    "    # X = variabel yang tidak tergantung apapun\n",
+    "    # y = variabel data yang akan diprediksi\n",
     "    def fit(self, X, y):\n",
     "        \n",
+    "        # self.w merupakan atribut dari perceptron yang dimana merepresentasikan bobot awal dari setiap data X\n",
+    "        # np.zeros(1 + X.shape[1]) artinya membuat array baru dengan ukuran dimensinya sama dengan X yg nilainya di set 0\n",
     "        self.w_ = np.zeros(1 + X.shape[1])\n",
     "        self.errors_ = []\n",
     "        \n",
+    "        # Melakukan looping sebanyak n_iter\n",
     "        for _ in range(self.n_iter):\n",
     "            errors = 0\n",
+    "\n",
+    "            # Melakukan looping sebanyak X\n",
     "            for xi, target in zip(X, y):\n",
+    "                # Mengupdate bobot\n",
+    "                # Jika target asli belum sesuai dg prediksi maka bobotnya diupdate\n",
+    "                # Jika sudah sesuai, bobotnya tetap\n",
+    "                # Prediksi ini untuk melihat prediksi\n",
     "                update = self.eta * (target - self.predict(xi))\n",
     "                self.w_[0] += update\n",
     "                self.w_[1:] += update * xi\n",
@@ -100,16 +124,18 @@
     "            self.errors_.append(errors)\n",
     "        return self\n",
     "    \n",
+    "    # Membuat fungsi untuk mengupdate atribut w (bobot)\n",
     "    def net_input(self, X):\n",
     "        return np.dot(X, self.w_[1:]) + self.w_[0]\n",
     "    \n",
+    "    # Membuat fungsi untuk mengembalikan nilai 1 jika net input X menghasilkan nilai lebih besar daripada 0, selain itu mengembalikan nilai 1\n",
     "    def predict(self, X):\n",
     "        return np.where(self.net_input(X) >= 0.0, 1, -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,59 +153,73 @@
    ],
    "source": [
     "# penerapan perceptron\n",
+    "\n",
+    "# Mengambil data sebanyak 100 baris dari kolom index 0-4 atau kolom ke-5\n",
     "y = df.iloc[0:100, 4].values\n",
+    "# Mengubah data yang bernama iris setosa menjadi -1, selain itu menjadi 1\n",
     "y = np.where(y == 'Iris-setosa', -1, 1)\n",
+    "# Mengambil data sebanyak 100 baris dari kolom index 0-3 atau kolom ke-4\n",
     "X = df.iloc[0:100, [0, 3]].values\n",
     "\n",
-    "\n",
+    "# Membuat suatu objek dari class perceptron dengan parameter eta dan iter\n",
+    "# Data 0.1 dan 10 kesimpen dari fungsi def init\n",
     "ppn = Perceptron(eta=0.1, n_iter=10)\n",
+    "# Memanggil data perceptron yang dimasukkan ke logika dengan menggunakan fungsi fit\n",
     "ppn.fit(X, y)\n",
     "\n",
-    "# plot the error for each epoch to check for convergence\n",
+    "# plot kesalahan untuk setiap iterasi untuk memeriksa konvergensi\n",
     "plt.plot(range(1, len(ppn.errors_)+1), ppn.errors_)\n",
+    "# Membuat label untuk koordinat X dg nama epoch yang menggambarkan iterasi\n",
     "plt.xlabel('Epochs')\n",
+    "# Membuat label untuk koordinat Y dg nama number of updates yang menggambarkan error\n",
     "plt.ylabel('Number of updates')\n",
+    "# Menampilkan grafik\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# buat fungsi untuk plot decision region\n",
     "\n",
+    "# Mengimport warna\n",
     "from matplotlib.colors import ListedColormap\n",
     "\n",
+    "# Membuat fungsi untuk mengkonfigurasi tampilan plot decision region\n",
     "def plot_decision_regions(X, y, classifier, resolution=0.02):\n",
-    "    # setup marker generator and color map\n",
+    "    # Mengatur generator penanda dan peta warna\n",
+    "    # Menginisialisasi tanda yang akan digunakan pada plotnya\n",
     "    markers = ('s', 'x', 'o', '^', 'v')\n",
+    "    # Menginisialisasi warna yang akan digunakan pada plotnya\n",
     "    colors = ('r', 'b', 'g', 'k', 'grey')\n",
+    "    # Membuat template tampilan dari warna\n",
     "    cmap = ListedColormap(colors[:len(np.unique(y))])\n",
     "    \n",
-    "    # plot the decision regions by creating a pair of grid arrays xx1 and xx2 via meshgrid function in Numpy\n",
+    "    # Membuat koordinat xx1 menjadi X, xx2 menjadi Y\n",
     "    x1_min, x1_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
     "    x2_min, x2_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
     "    xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution), np.arange(x2_min, x2_max, resolution))\n",
     "    \n",
-    "    # use predict method to predict the class labels z of the grid points\n",
+    "    # Gunakan metode prediksi untuk memprediksi label kelas z dari titik kisi\n",
     "    Z = classifier.predict(np.array([xx1.ravel(),xx2.ravel()]).T)\n",
     "    Z = Z.reshape(xx1.shape)\n",
     "    \n",
-    "    # draw the contour using matplotlib\n",
+    "    # Menggambar grafik menggunakan matplotlib\n",
     "    plt.contourf(xx1, xx2, Z, alpha=0.4, cmap=cmap)\n",
     "    plt.xlim(xx1.min(), xx1.max())\n",
     "    plt.ylim(xx2.min(), xx2.max())\n",
     "    \n",
-    "    # plot class samples\n",
+    "    # Menampilkan Y ke dalam plot\n",
     "    for i, cl in enumerate(np.unique(y)):\n",
     "        plt.scatter(x=X[y==cl, 0], y=X[y==cl, 1], alpha=0.8, c=cmap(i), marker=markers[i], label=cl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,8 +244,7 @@
     }
    ],
    "source": [
-    "# hasil plot \n",
-    "\n",
+    "# Hasil plot \n",
     "plot_decision_regions(X, y, ppn)\n",
     "plt.xlabel('sepal length [cm]')\n",
     "plt.ylabel('petal length [cm]')\n",
